title margin fix on mobile

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -76,7 +76,7 @@
 }
 
 .site-title {
-	margin-top: 5px;
+	margin-top: 7px;
 
 	> a {
 		text-decoration: none;
